# MidasFlow

./: .gitignore  Cargo.toml  README.md
adr/: 001-20230815-midasflow-key-capabilities.md  002-20230816-wasm-extensions-for-data-transformations-and-udfs.md  003-20230817-data-versioning-and-historical-access.md  004-20230818-distributed-architecture-and-sharding.md
midas-cli/: Cargo.toml
midas-cli/src/: errors.rs  lib.rs  main.rs
midas-cli/src/cli/: helper.rs  types.rs
midas-cli/src/engine/: orchestrator.rs
midas-types/: Cargo.toml
midas-types/src/: ingestion_types.rs  lib.rs
midas-types/src/models/: config.rs  connection.rs  mod.rs  source.rs
