[package]
name = "midas-cli"
version = "0.1.0"
edition = "2021"
default-run = "midas"
authors = ["Mohsen Zainalpour <zainalpour@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.deb]
name = "midas"

[dependencies]
midas-types = { path = "../midas-types" }

clap = { version = "4.1.11", features = ["derive"] }
ctrlc = "3.2.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3.26"

[[bin]]
edition = "2021"
name = "midas"
path = "src/main.rs"