[package]
name = "midas-types"
version = "0.1.0"
edition = "2021"
authors = ["Mohsen Zainalpour <zainalpoiur@gmailc.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.34"
thiserror = "1.0.38"
serde = { version = "1.0.152", features = ["derive", "rc"] }
serde_json = { version = "1.0.93", features = ["std"] }
prost = "0.11.8"
serde_yaml = "0.9.17"